# pico-sdram

./: .gitmodules  README.md  cmds.xlsx  lol.py  send_sdram.ipynb  send_sdram.py
pcb/sdram-demo/: .gitignore  fp-info-cache  sdram.kicad_pcb  sdram.kicad_prl  sdram.kicad_pro  sdram.kicad_sch  sdram.net  sdram.round-tracks-config  ~sdram.kicad_sch.lck
pcb/sdram-demo/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pico/: CMakeLists.txt  picoFlashTool_WinPS.ps1  three_74hc595.pio
pico/src/: clkgen.pio  config.h  data_bus.pio  debug.c  debug.h  hello.pio  hsync.pio  pico-sdram.c  pinout.h  sdram.h  sdram_cmd.c  sdram_cmd.h  three_74hc595.pio  vsync.pio
sim/: csv-to-verilog.py  sim.do  test_sdram.sv  test_sdram_real.sv  tmp.v  xilinx-sd.csv
verilog/: .gitignore  74595.v  IS42VM16400K.v  MT48LC8M16A2.v  csv-to-verilog.py  new-thing.csv  test_sdram.sv  test_sdram_real.sv  test_sdram_stim.v  tmp.v  xilinx-sd.csv  xilinx-sd2.csv  xilinx-sd3.csv  xilinx-sd4.csv
verilog/sim/: sim-nogui.do  sim.do
